<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e9edf5"
    android:orientation="vertical"
    tools:context=".ui.Activities.CreateActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        >
        <ImageView
            android:id="@+id/returnButton"
            android:layout_width="@dimen/dp_45"
            android:layout_height="@dimen/dp_45"
            android:padding="@dimen/dp_15"
            android:src="@mipmap/ic_back"
            />
    </RelativeLayout>

    <ImageView
        android:id="@+id/recipeImageDetail"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:background="#adc6f0"
        android:padding="@dimen/dp_15"
        android:src="@mipmap/ic_adds" />

    <EditText
        android:id="@+id/recipeTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@color/white"
        android:hint="Add a title..."
        android:paddingHorizontal="@dimen/dp_20" />

    <EditText
        android:id="@+id/recipeDescription"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@color/white"
        android:gravity="start"
        android:hint="Add a description..."
        android:paddingHorizontal="@dimen/dp_20"
        android:paddingVertical="@dimen/dp_20" />

    <EditText
        android:id="@+id/recipeIngredients"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@color/white"
        android:hint="Add recipe ingredients..."
        android:paddingHorizontal="@dimen/dp_20"
         />

    <EditText
        android:id="@+id/recipeTags"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@color/white"
        android:hint="Add recipe tags..."
        android:paddingHorizontal="@dimen/dp_20"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="#E91E63"
        android:textStyle="bold"
        android:visibility="invisible"
        />

    <RelativeLayout
        android:layout_width="@dimen/dp_180"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >
        <Button
            android:id="@+id/recipeSubmit"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:background="#afb3ba"
            android:onClick="handleText"
            android:text="Submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />
    </RelativeLayout>

</LinearLayout>

