<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.Activities.MainActivity">

    <FrameLayout
        android:id="@+id/contenLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></FrameLayout>

    <LinearLayout
        android:id="@+id/llbutton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llSearchButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivSearchButton"
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:src="@mipmap/search" />

            <TextView
                android:id="@+id/tvSearchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="Search"
                android:textColor="@color/homecolor"
                android:textSize="@dimen/sp_16"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llCreateButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivCreateButton"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:background="@drawable/shape_mainbgs"
                android:padding="@dimen/dp_10"
                android:src="@mipmap/plus1" />

            <TextView
                android:id="@+id/tvCreateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "
                android:textColor="@color/homecolorno"
                android:textSize="@dimen/sp_16"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llRecommendButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivRecommendButton"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_rectangle" />

            <TextView
                android:id="@+id/tvChefButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="Mine"
                android:textColor="@color/homecolorno"
                android:textSize="@dimen/sp_16"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>