<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical">

  <RelativeLayout
      android:id="@+id/deleteLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:visibility="gone">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/dp_45"
        android:layout_height="@dimen/dp_45"
        android:padding="@dimen/dp_15"
        android:src="@mipmap/ic_back" />

    <ImageView
        android:id="@+id/delete"
        android:layout_width="@dimen/dp_45"
        android:layout_height="@dimen/dp_45"
        android:layout_alignParentEnd="true"
        android:padding="@dimen/dp_10"
        android:src="@drawable/baseline_delete_forever_24" />
  </RelativeLayout>

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="83dp">

    <TextView
        android:id="@+id/recommendFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_marginBottom="10dp"
        android:background="@android:drawable/editbox_background"
        android:contentDescription="backButton"
        android:drawableRight="@android:drawable/arrow_down_float"
        android:drawablePadding="16dp"
        android:hint="Select ingredients to get recommendations"
        android:padding="12dp" />
  </RelativeLayout>

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="63dp">

    <Button
        android:id="@+id/recommendButton"
        android:layout_width="152dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="132dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="127dp"
        android:text="Recommend" />

  </RelativeLayout>

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recycler"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"></androidx.recyclerview.widget.RecyclerView>

</LinearLayout>
